# uwupaste

./: .env  Cargo.toml  LICENSE  Rocket.toml  diesel.toml
migrations/2022-03-24-221721_create_paste/: down.sql  up.sql
src/: api.rs  frontend.rs  main.rs
src/db/: mod.rs  model.rs  schema.rs
static/: style.css
templates/: base.html.tera  index.html.tera
