[package]
name = "uwupaste"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
rocket = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]