[package]
name = "uwupaste"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
derive_builder = "0.11"
diesel = { version = "1.4", features = ["postgres", "chrono", "uuidv07"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
rand = "0.8"
rocket = "0.5.0-rc.1"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]