[package]
name = "uwupaste"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.11"
diesel = { version = "1.4", features = ["postgres", "chrono", "uuidv07"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
rand = "0.8"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]